# atlas-ai

./: Dockerfile  README.md  pyproject.toml
atlas_ai/: __init__.py  __main__.py  advisor.py  llm_client.py  prompts.py
tests/: test_ai.py  test_main.py
